--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -93,7 +93,7 @@
                         android:layout_margin="20dp"
                         android:background="#34495E"
                         android:fontFamily="sans-serif-medium"
-                        android:text="Tutor Request"
+                        android:text="Job Posted"
                         android:textAlignment="center"
                         android:textColor="@android:color/background_light" />
                 </LinearLayout>
@@ -128,6 +128,24 @@
                         android:background="#34495E"
                         android:fontFamily="sans-serif-medium"
                         android:text="Children"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/background_light" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/payment_sidebar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:background="#34495E"
+                        android:fontFamily="sans-serif-medium"
+                        android:text="Payment"
                         android:textAlignment="center"
                         android:textColor="@android:color/background_light" />
                 </LinearLayout>
