--- a/app/src/main/res/layout/activity_tutor_request_view_app.xml
+++ b/app/src/main/res/layout/activity_tutor_request_view_app.xml
@@ -11,12 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#5A5AD0"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageButton
+            android:id="@+id/homebtn"
+            android:layout_width="59dp"
+            android:layout_height="67dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/homs" />
+
         <TextView
+            android:id="@+id/textView12"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="15dp"
@@ -25,13 +34,13 @@
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
             android:textSize="24sp" />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="648dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
@@ -67,8 +76,9 @@
                 android:layout_margin="15dp">
 
                 <LinearLayout
+                    android:id="@+id/jobPostedAppll"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
                     <android.support.v7.widget.CardView
@@ -199,8 +209,9 @@
                 android:layout_margin="15dp">
 
                 <LinearLayout
+                    android:id="@+id/jobPostedRecll"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
                     <android.support.v7.widget.CardView
