--- a/app/src/main/res/layout/activity_hire_tutor.xml
+++ b/app/src/main/res/layout/activity_hire_tutor.xml
@@ -77,7 +77,7 @@
                         android:textStyle="bold" />
 
                     <Spinner
-                        android:id="@+id/spinner4"
+                        android:id="@+id/spinnerChildList"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1" />
@@ -94,6 +94,7 @@
                     android:textStyle="bold" />
 
                 <RadioGroup
+                    android:id="@+id/rgSubjectHire"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -203,12 +204,12 @@
                         android:id="@+id/textView20"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Date Start:"
+                        android:layout_weight="3"
                         android:gravity="center_vertical"
-                        android:textSize = "16sp"
-                        android:textStyle="bold"
-                        android:textColor="@android:color/black"/>
+                        android:text="Date Start:"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/dateStarttxt"
