--- a/app/src/main/res/layout/activity_hire_tutor.xml
+++ b/app/src/main/res/layout/activity_hire_tutor.xml
@@ -42,8 +42,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -216,9 +215,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:clickable="true"
                         android:ems="10"
-                        android:inputType="none"
-                        android:clickable="true" />
+                        android:inputType="none" />
 
                 </LinearLayout>
 
@@ -259,7 +258,6 @@
 
             </LinearLayout>
         </ScrollView>
-
 
 
     </LinearLayout>
