added most functionality :D

--- a/app/src/main/res/layout/activity_job_list_secondary.xml
+++ b/app/src/main/res/layout/activity_job_list_secondary.xml
@@ -92,7 +92,8 @@
                     android:id="@+id/parentViewApplications"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                    android:layout_margin="5dp"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
