--- a/app/src/main/res/layout/activity_job_list_primary.xml
+++ b/app/src/main/res/layout/activity_job_list_primary.xml
@@ -86,13 +86,15 @@
                 android:id="@+id/joblistprimaryll"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="visible">
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/TutorJobList"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                    android:layout_margin="5dp"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
