--- a/app/src/main/res/layout/activity_parent_dashboard_cal.xml
+++ b/app/src/main/res/layout/activity_parent_dashboard_cal.xml
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <CalendarView
-            android:id="@+id/calendarView"
+            android:id="@+id/calendarViewParent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -64,7 +64,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/text_dow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -93,7 +93,8 @@
                     android:id="@+id/dashboardCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp">
+                    android:layout_margin="15dp"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
