--- a/app/src/main/res/layout/activity_parent_dashboard_cal.xml
+++ b/app/src/main/res/layout/activity_parent_dashboard_cal.xml
@@ -50,7 +50,8 @@
         <CalendarView
             android:id="@+id/calendarViewParent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
     </LinearLayout>
 
     <LinearLayout
@@ -69,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:text="[Days of Week]"
+            android:text="List of Active Tutoring Session"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="18sp"
