--- a/app/src/main/res/layout/activity_parent_dashboard_cal.xml
+++ b/app/src/main/res/layout/activity_parent_dashboard_cal.xml
@@ -51,7 +51,7 @@
             android:id="@+id/calendarViewParent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:visibility="visible" />
     </LinearLayout>
 
     <LinearLayout
