--- a/app/src/main/res/layout/activity_posthistoryclosed.xml
+++ b/app/src/main/res/layout/activity_posthistoryclosed.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TutorDashboardCal">
+    tools:context=".posthistoryclosed">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:fontFamily="sans-serif-black"
-            android:text="Dashboard"
+            android:text="Post History"
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
             android:textSize="24sp" />
@@ -38,67 +38,63 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout8"
+        android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="0dp"
+        android:layout_margin="20dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-        <CalendarView
-            android:id="@+id/calendarView"
+        <Button
+            android:id="@+id/ongoingbtn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="visible" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Ongoing Classes" />
 
+        <Button
+            android:id="@+id/closedbtn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#32CD32"
+            android:text="Ended Classes"
+            android:textStyle="bold" />
+
+    </LinearLayout>
     <LinearLayout
-        android:id="@+id/linearLayout7"
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="List of Active Tutoring Session"
-            android:textAlignment="center"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_margin="20dp">
 
             <LinearLayout
-                android:id="@+id/Tutordbll"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginRight="0dp"
-                android:layout_marginBottom="0dp"
                 android:orientation="vertical">
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/dashboardCard"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:visibility="gone">
+                    android:layout_height="match_parent"
+                    android:layout_margin="15dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
                         android:orientation="vertical">
 
                         <TextView
@@ -111,10 +107,10 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/dashCardLvltxt"
+                            android:id="@+id/dashCardTutorTxt"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Standard: 5"
+                            android:text="Tutor: Pn. Aliza"
                             android:textColor="@android:color/black"
                             android:textSize="16sp" />
 
@@ -130,23 +126,15 @@
                             android:id="@+id/dashCardTimeTxt"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="When: 12/09/19, 8.00pm"
+                            android:text="Date Start: 12/09/19"
                             android:textColor="@android:color/black"
                             android:textSize="16sp" />
 
-                        <TextView
-                            android:id="@+id/dashCardLocTxt"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Location: Jalan Ampang"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
             </LinearLayout>
         </ScrollView>
-
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
