--- a/app/src/main/res/layout/activity_hire_tutor.xml
+++ b/app/src/main/res/layout/activity_hire_tutor.xml
@@ -132,7 +132,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Additional Mathematics" />
+                        android:text="Add. Mathematics" />
 
                     <RadioButton
                         android:id="@+id/phyrb"
