--- a/app/src/main/res/layout/activity_parent_history_closed.xml
+++ b/app/src/main/res/layout/activity_parent_history_closed.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".posthistoryclosed">
+    tools:context=".ParentHistoryPostClosed">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -81,6 +81,7 @@
             android:layout_margin="20dp">
 
             <LinearLayout
+                android:id="@+id/postHistoryEndedLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -89,7 +90,8 @@
                     android:id="@+id/dashboardCard"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="15dp">
+                    android:layout_margin="15dp"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
