--- a/app/src/main/res/layout/activity_parent_history_post.xml
+++ b/app/src/main/res/layout/activity_parent_history_post.xml
@@ -84,6 +84,7 @@
             android:layout_margin="20dp">
 
             <LinearLayout
+                android:id="@+id/postHistoryOngoingLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -92,7 +93,8 @@
                     android:id="@+id/dashboardCard"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="15dp">
+                    android:layout_margin="15dp"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
